don't set overflow:scroll on pseudo-hidden overlays. fixes #68

--- a/src/overlay.css
+++ b/src/overlay.css
@@ -17,6 +17,7 @@
   backdrop-filter: blur(0);
   background: none;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .overlay-modal .profile-image {
